@@ -1,2 +1,4 @@
+# partition selection
+
 %include /tmp/partinfo
 
