@@ -22,6 +22,7 @@ Cobbler CHANGELOG
 - (FEAT) refactored import with better Debian/Ubuntu support
 - (FEAT) Func integration snippets and new settings
 - (FEAT) settings file and modules.conf now generated by setup.py using templates
+- (FEAT) --template-files makes cobbler more of a full config management system!
 
 - Fri Sep 26 2008 - 1.2.5
 - (BUGF) expose --arch for "cobbler image add"
